# test_api

./: .env.example  .gitignore  README.md  TUTORIAL_Sub2API.md  check_apihy.py  check_codex_sub2api.py  check_new_api.py  check_new_api.sh  check_openrouter.py  check_openrouter.sh  comp.doc  model_name.py  pyproject.toml
core/: __init__.py
core/llm/: __init__.py  base.py  codex_sub2api_client.py  env_utils.py  openai_client.py  openrouter_newapi_client.py
tests/: test_codex_sub2api_client.py
