[project]
name = "check-api"
version = "0.1.0"
description = "Check API connectivity, available models, and chat completion for OpenRouter / new-api proxies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "openai>=1.75.0",
  "socksio>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
